--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 
 @import './components/_buttons';
 @import './components/cards';
+@import './components/stats';
 
 @import './layouts/header';
 
@@ -21,3 +22,4 @@
 @import './utils/utilities';
 
 @import './themes/theme-toggle';
+@import './components/modal';
