--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,5 +1,18 @@
+/* ================= RESET ================= */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
